<resources>
    <string name="app_name">Анімації в Android</string>
    <string name="task_1">Завдання 1: Переміщення</string>
    <string name="task_2">Завдання 2: Зміна розміру</string>
    <string name="task_3">Завдання 3: Обертання</string>
    <string name="task_4">Завдання 4: Зміна кольору</string>
    <string name="task_5">Завдання 5: Анімація кнопки</string>
    <string name="task_6">Завдання 6: Прозорість</string>
    <string name="task_7">Завдання 7: Комбінована анімація</string>
    <string name="task_8">Завдання 8: Lottie-анімація</string>
    <string name="task_9">Завдання 9: Перехід Activity</string>
    <string name="task_10">Завдання 10: Фізична анімація</string>
    <string name="go_forward">Перейти вперед</string>
    <string name="go_home">Перейти на головну</string>
    <string name="go_back">Повернутися назад</string>
    <string name="move_rewind">Перемістити / Повернути</string>
    <string name="colored_ball">Кольоровий м\'яч</string>
    <string name="student">Студент навчається</string>
    <string name="scale_up">Масштабувати</string>
    <string name="press_button">Натисни кнопку!</string>
    <string name="turn">Повернути логотип</string>
    <string name="change_color">Зміна кольору</string>
    <string name="animate_button">Анімувати</string>
    <string name="fade_toggle">Перемкнути прозорість</string>
    <string name="fade_image">Зображення</string>
    <string name="animated_image">Анімоване зображення</string>
    <string name="animated_ball">Анімований м’яч</string>
    <string name="start_animation">Запустити анімацію</string>
    <string name="stop_animation">Зупинити анімацію</string>
    <string name="play_animation">Відтворити анімацію</string>
    <string name="lottie_animation">Lottie анімація</string>
    <string name="transition_activity">Кастомний перехід між Activity з ефектом слайду</string>
    <string name="slide_back_transition">Слайд назад</string>
    <string name="fade_back_transition">Згасання назад</string>
    <string name="scale_back_transition">Масштабування назад</string>
    <string name="slide_forward_transition">Слайд вперед</string>
    <string name="fade_forward_transition">Згасання вперед</string>
    <string name="scale_forward_transition">Масштабування вперед</string>
    <string name="springy_animation">Пружність</string>
    <string name="throw_animation">Кидання</string>
</resources>