<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/task_8"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/lottie_animation"
        app:lottie_rawRes="@raw/animation_dev"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/play_animation"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimationView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_back"
        android:contentDescription="@string/go_back"
        app:iconPadding="8dp"
        android:padding="8dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/homeButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_home"
        android:contentDescription="@string/go_home"
        app:iconPadding="8dp"
        android:padding="8dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintEnd_toStartOf="@id/forwardButton"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forwardButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_forward"
        android:contentDescription="@string/go_forward"
        app:iconPadding="8dp"
        android:padding="8dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>