<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/task_10"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/springyImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/animated_ball"
        android:src="@drawable/colored_ball"
        app:layout_constraintEnd_toEndOf="@id/springyLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/springyLabel"
        app:layout_constraintTop_toBottomOf="@id/springyLabel" />

    <TextView
        android:id="@+id/springyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/springy_animation"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/throwImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/animated_ball"
        android:src="@drawable/colored_ball"
        app:layout_constraintEnd_toEndOf="@id/throwLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/throwLabel"
        app:layout_constraintTop_toBottomOf="@id/throwLabel" />

    <TextView
        android:id="@+id/throwLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throw_animation"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/go_back"
        android:padding="8dp"
        app:icon="@drawable/ic_back"
        app:iconPadding="8dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/homeButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/go_home"
        android:padding="8dp"
        app:icon="@drawable/ic_home"
        app:iconPadding="8dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/forwardButton"
        app:layout_constraintStart_toEndOf="@id/backButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forwardButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/go_forward"
        android:padding="8dp"
        app:icon="@drawable/ic_forward"
        app:iconPadding="8dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/homeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>